Write test for valid new setting reference

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,5 @@ if(BUILD_TESTS)
     add_exe_test(new_file_parser_reference_is_valid)
     add_exe_test(new_string_parser_reference_is_valid)
     add_exe_test(parsing_empty_file_returns_status_end)
+    add_exe_test(new_setting_reference_is_valid)
 endif()
